[package]
name = "spaces-printer"
version = "0.3.5"
edition = "2024"
license = "MIT"
description = "A tool for managing sub-processes and showing progress in the terminal"
repository = "https://github.com/work-spaces/spaces-printer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
owo-colors = { version = "4.1", features = ["supports-colors"] }
anyhow = "1"
indicatif = "0.18"
console = "0.16"
state = "0.6"
strum = { version = "0.26", features = ["derive"] }
terminal_size = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
flume = "0.11"
